--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#" class="logo">
         <img src="images/logo_gr.png" alt="Gratisfaction">
       </a>
-      <a href="mailto:info@appsmav.com" class="btn btnGrey">Write to Us</a>
+      <a href="mailto:info@appsmav.com" class="button buttonGrey">Write to Us</a>
     </header>
     <div class="mainBlock">
       <section class="section sectionWelcome">
@@ -29,8 +29,8 @@
             <img src="images/splash.png" />
           </figure>
           <h1>Welcome to Gratisfaction</h1>
-          <button class="btn btnBlack">view Quick setup guide <i class="icon-right-arrow"></i></button>
-          <a href="#" class="skip">Skip guide and start setup</a>
+          <button class="button buttonBlack">view Quick setup guide <i class="icon-right-arrow"></i></button>
+          <a href="/setup.html" class="skip">Skip guide and start setup</a>
         </div>
       </section>
       <section class="section sectionSetup" data-step="1">
@@ -48,7 +48,7 @@
               <figure><img src="images/step-1.jpg" alt=""></figure>
               <div class="stepInfo">
                 <i>1</i>
-                <h5>Start with <br>basic settings</h5>
+                <h5>Start with basic <br>settings</h5>
                 <p>You can pause or edit the <br>program at anytime. Even if the <br>program is live. You are in <br>control of your program</p>
               </div>
             </div>
@@ -71,7 +71,7 @@
           </div>
           <div class="bottomNav">
             <a href="#" class="back ctaPrev"><i class="icon-left-arrow"></i> Back</a>
-            <button class="btn btnOrange ctaNext">Next <i class="icon-right-arrow"></i></button>
+            <button class="button buttonOrange ctaNext">Next <i class="icon-right-arrow"></i></button>
           </div>
         </div>
       </section>
@@ -111,7 +111,7 @@
               <p>More features are <br>available after the <br>initial setup</p>
             </li>
           </ul>
-          <a href="#" class="btn btnOrange">setup now <i class="icon-right-arrow"></i></a>
+          <a href="/setup.html" class="button buttonOrange">setup now <i class="icon-right-arrow"></i></a>
         </div>
       </section>
     </div>
