--- a/setup.html
+++ b/setup.html
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="card-header disabled " data-toggle="collapse" data-target="#rewards" aria-expanded="true"
+        <div class="card-header " data-toggle="collapse" data-target="#rewards" aria-expanded="true"
           aria-controls="rewards">
           2. Rewards
         </div>
