--- a/setup.html
+++ b/setup.html
@@ -80,7 +80,7 @@
                 <a href="#" class="resetSetting">
                   <i class="material-icons">
                     refresh
-                  </i> 
+                  </i>
                   <u>Reset to recommended settings</u>
                 </a>
               </div>
@@ -122,10 +122,156 @@
                 <a href="#" class="resetSetting">
                   <i class="material-icons">
                     refresh
-                  </i> 
+                  </i>
                   <u>Reset to recommended settings</u>
                 </a>
               </div>
+            </div>
+            <div class="setupSteps">
+              <div class="stepHead">
+                <h3>Pay by Points</h3>
+                <p>Setup if customers can pay using their points</p>
+                <label class="switch" for="pointsProgram">
+                  <input type="checkbox" id="pointsProgram" />
+                  <i></i>
+                </label>
+              </div>
+              <div class="stepBody">
+                <h6>Set Reward Point Value</h6>
+                <div class="form-row align-items-center">
+                  <div class="form-group col-md-2">
+                    <div class="input-group-prepend">€</div>
+                    <input type="number" readonly class="form-control" id="inputEmail4" value="1">
+                  </div>
+                  <div class="col-md-3  text-center">is equal to</div>
+                  <div class="form-group col-md-4">
+                    <label for="inputEmail4">Reward Point</label>
+                    <input type="number" class="form-control" id="inputEmail4" value="100">
+                  </div>
+                  <div class="col-md-2 text-center">
+                    <a href="#" class="btn btn-link">Sample</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="setupSteps">
+              <div class="stepHead">
+                <h3>Referral Program</h3>
+                <p>Setup refer a friend program</p>
+                <label class="switch" for="pointsProgram">
+                  <input type="checkbox" id="pointsProgram" />
+                  <i></i>
+                </label>
+              </div>
+              <div class="stepBody">
+                <h6>Reward Points for sucessful referrals</h6>
+                <div class="row">
+                  <div class="mt-2 mb-2 form-group col-md-5">
+                    <input type="number" class="form-control" id="inputEmail4" value="200">
+                  </div>
+                </div>
+                <hr class="mt-4 mb-4">
+                <h6>Goals</h6>
+                <div class="row">
+                  <div class="mt-2 mb-2 form-group col-md-5">
+                    <label for="">Total Numbers</label>
+                    <input type="number" class="form-control" id="inputEmail4" value="1">
+                  </div>
+                  <div class="col-md-12">
+                    <a href="#" class="btn btn-link p-0"><small>Get no. of invited friends to purchase</small></a>
+                  </div>
+                </div>
+                <hr class="mt-4 mb-4">
+                <h6>Limit Referral Rewards Per Users?</h6>
+                <div class="row">
+                  <div class="col-md-12 mt-2 mb-3">
+                    <div class="btn-group btnLoyaltyPoints" role="group">
+                      <button type="button" class="btn btn-dark">Yes</button>
+                      <button type="button" class="btn btn-outline-dark">No</button>
+                    </div>
+                  </div>
+                  <div class="mt-3 mb-2 form-group col-md-5">
+                    <label for="">Max. Rewards</label>
+                    <input type="number" class="form-control" id="inputEmail4" value="1">
+                  </div>
+                </div>
+                <hr class="mt-4 mb-4">
+                <h6>Coupon Type</h6>
+                <div class="row">
+                  <div class="col-md-12 mt-2 mb-3">
+                    <div class="alert alert-warning d-flex align-items-center" role="alert">
+                      <span class="badge badge-pill badge-primary">i</span>
+                      We will create coupon automatically on your webstore
+                    </div>
+                    <div class="btn-group btnLoyaltyPoints" role="group">
+                      <button type="button" class="btn btn-outline-dark">Fixed off</button>
+                      <button type="button" class="btn btn-dark">Percentage off</button>
+                      <button type="button" class="btn btn-outline-dark">Free Shipping</button>
+                    </div>
+                  </div>
+                  <div class="row col-md-12">
+                    <div class="form-group col-md-6">
+                      <div class="input-group-prepend">€</div>
+                      <label for="">Max. Coupon Value</label>
+                      <input type="number" class="form-control" id="inputEmail4" value="20">
+                    </div>
+                  </div>
+                  <div class="row col-md-12">
+                    <div class="mb-0 form-group col-md-6">
+                      <div class="input-group-prepend">€</div>
+                      <label for="">Minimum Spend Value</label>
+                      <input type="number" class="form-control" id="inputEmail4" value="0">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="stepFoot d-flex justify-content-end">
+                <a href="#" class="resetSetting">
+                  <i class="material-icons">
+                    refresh
+                  </i>
+                  <u>Reset to recommended settings</u>
+                </a>
+              </div>
+            </div>
+            <div class="setupSteps">
+              <div class="stepHead">
+                <h3>Facebook Share Setup</h3>
+                <p>When members share your message on Facebook</p>
+                <label class="switch" for="pointsProgram">
+                  <input type="checkbox" id="pointsProgram" />
+                  <i></i>
+                </label>
+              </div>
+              <div class="stepBody">
+                <div class="form-group mt-0 mb-5 col-md-5">
+                  <label for="inputEmail4">Reward Point</label>
+                  <input type="number" class="form-control" id="inputEmail4" value="100">
+                </div>
+                <div class="form-group mb-5 col-md-12">
+                  <label for="inputEmail4">Facebook Share Text</label>
+                  <textarea class="form-control" cols="30" rows="3">Hey check out my new product.</textarea>
+                  <a href="#" class="btn btn-link mt-2 p-0"><small>Sample</small></a>
+                </div>
+                <div class="form-group col-md-12 mb-2">
+                  <label for="inputEmail4">On-Click URL</label>
+                  <input type="text" class="form-control" id="inputEmail4" value="www.google.com/product.com">
+                </div>
+                <div class="col-md-12 ">
+                  <div class="custom-control d-flex scale-8 to-00 custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="customCheck1">
+                    <label class="custom-control-label" for="customCheck1">Is your website has HTTPS?</label>
+                  </div>
+                </div>
+                </div>
+                <div class="stepFoot d-flex justify-content-end">
+                  <a href="#" class="resetSetting">
+                    <i class="material-icons">
+                      refresh
+                    </i>
+                    <u>Reset to recommended settings</u>
+                  </a>
+                </div>
             </div>
           </div>
         </div>
@@ -138,11 +284,13 @@
 
         <div id="rewards" class="collapse" aria-labelledby="headingOne" data-parent="#setupAccordion">
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+            moon
             officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3
             wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
             Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
-            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt
+            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
+            nesciunt
             you probably haven't heard of them accusamus labore sustainable VHS.
           </div>
         </div>
@@ -155,11 +303,13 @@
 
         <div id="themes" class="collapse" aria-labelledby="headingOne" data-parent="#setupAccordion">
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+            moon
             officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3
             wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
             Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
-            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt
+            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
+            nesciunt
             you probably haven't heard of them accusamus labore sustainable VHS.
           </div>
         </div>
@@ -178,4 +328,4 @@
   <script src="scripts/main.js"></script>
 </body>
 
-</html>
+</html> 
