--- a/setup.html
+++ b/setup.html
@@ -54,7 +54,7 @@
                       <h3>Points Program</h3>
                       <p>Start rewarding your customers for purchases</p>
                       <label class="switch" for="pointsProgram">
-                        <input type="checkbox" id="pointsProgram" />
+                        <input type="checkbox" checked id="pointsProgram" />
                         <i></i>
                       </label>
                     </div>
@@ -77,7 +77,11 @@
                           <label for="inputEmail4">Reward Point</label>
                           <input type="number" class="form-control" id="inputEmail4" value="1">
                         </div>
-
+                        <div class="recommendFloater">
+                          <i class="material-icons info">info</i>
+                          <i class="material-icons badge badge-pill badge-warning">star</i>
+                          Recommended setting it up as 1:1, And, you can control the redemption value through "2.Rewards Section"
+                        </div>
                       </div>
                     </div>
                     <div class="stepFoot d-flex justify-content-end">
@@ -96,7 +100,7 @@
                       <h3>Sign Up Bonus</h3>
                       <p>Reward customers for creating an account on your store</p>
                       <label class="switch" for="signupBonus">
-                        <input type="checkbox" id="signupBonus" />
+                        <input type="checkbox" checked id="signupBonus" />
                         <i></i>
                       </label>
                     </div>
@@ -140,7 +144,7 @@
                       <h3>Pay by Points</h3>
                       <p>Setup if customers can pay using their points</p>
                       <label class="switch" for="payPoints">
-                        <input type="checkbox" id="payPoints" />
+                        <input type="checkbox" checked id="payPoints" />
                         <i></i>
                       </label>
                     </div>
@@ -170,7 +174,7 @@
                       <h3>Referral Program</h3>
                       <p>Setup refer a friend program</p>
                       <label class="switch" for="referralProgram">
-                        <input type="checkbox" id="referralProgram" />
+                        <input type="checkbox" checked id="referralProgram" />
                         <i></i>
                       </label>
                     </div>
@@ -252,7 +256,7 @@
                       <h3>Facebook Share Setup</h3>
                       <p>When members share your message on Facebook</p>
                       <label class="switch" for="fbShareSetup">
-                        <input type="checkbox" id="fbShareSetup" />
+                        <input type="checkbox" checked id="fbShareSetup" />
                         <i></i>
                       </label>
                     </div>
@@ -291,9 +295,9 @@
             </div>
             <div class="setupSwiper-navigator">
               <div>
-                <button class="setupSwiper-button-prev btn btn-outline-secondary">Back</button>
+                <button class="setupSwiper-button-prev btn btn-outline-secondary pr-5 pl-5">Back</button>
                 <div class="setupSwiper-pagination swiper-pagination"></div>
-                <button class="setupSwiper-button-next btn btn-warning">Next</button>
+                <button class="setupSwiper-button-next btn btn-warning text-light pr-5 pl-5">Next</button>
               </div>
             </div>
           </div>
